--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -119,12 +119,13 @@
 
     <TextView
         android:id="@+id/apellidoPaterno2"
-        android:layout_width="0dp"
-        android:layout_height="21dp"
+        android:layout_width="126dp"
+        android:layout_height="18dp"
         android:text="Apellido Materno:"
         android:textSize="16dp"
         app:layout_constraintBaseline_toBaselineOf="@+id/editTextApellidoMaterno"
         app:layout_constraintEnd_toStartOf="@+id/buttonEnviar"
+        app:layout_constraintHorizontal_bias="0.05"
         app:layout_constraintStart_toStartOf="@+id/dni" />
 
     <EditText
