--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -14,7 +14,6 @@
         android:onClick="registrarPostulante"
         android:text="Registro Postulantes"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -22,13 +21,12 @@
         android:id="@+id/buscarPostulanteBTN"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="364dp"
+        android:layout_marginTop="50dp"
         android:onClick="buscarPostulante"
         android:text="Buscar Postulante"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/registroPostulanteBTN" />
 
     <TextView
         android:id="@+id/textView"
@@ -50,4 +48,15 @@
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/registroPostulanteBTN"
         app:layout_constraintStart_toEndOf="@+id/textView" />
+
+    <Button
+        android:id="@+id/btn_menu_listar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:onClick="listarPostulantes"
+        android:text="Listar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buscarPostulanteBTN" />
 </androidx.constraintlayout.widget.ConstraintLayout>
